<resources>
    <string name="app_name">Shopping List</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="email">Email</string>
    <string name="hint_email">Email</string>
    <string name="welcome">WELCOME</string>
    <string name="user_hint">USER</string>
    <string name="see_my_lists">SEE MY LISTS</string>
    <string name="new_list">NEW LIST</string>
    <string name="hint_newlist">Naslov liste</string>
    <string name="ok">OK</string>
    <string name="naslov">Naslov</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="share_list">Share list:</string>
    <string name="save">SAVE</string>
    <string name="naslov_lista">Naslov :</string>
    <string name="shared">Shared :</string>
    <string name="add">add</string>
    <string name="hint_newtask">zadatak1</string>
    <string name="placeholder">Nestoo</string>
</resources>