<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:layout_weight="1"
            android:text="@string/username"
            android:id="@+id/reg_username"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:id="@+id/reg_etxt1"
            android:hint="@string/hint_username"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:layout_weight="1"
            android:text="@string/email"
            android:id="@+id/reg_email"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:id="@+id/reg_etxt2"
            android:hint="@string/hint_email"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="left"
            android:gravity="left|center"
            android:layout_weight="1"
            android:text="@string/password"
            android:id="@+id/reg_password"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:id="@+id/reg_etxt3"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register"
        android:id="@+id/register"
        />

</LinearLayout>